# wgsl-validator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
ffi/: wgsl_validator.h
src/: errors.rs  ffi.rs  lib.rs  validation.rs
test/: build.sh  invalid_test.c  valid_test.c
