[package]
name = "wgsl-validator"
version = "0.1.0"
authors = ["kbz_8 <contact@kbz8.me>"]
edition = "2024"

description = "Validate wgsl in rust or C/C++"
keywords = ["wgsl"]
license = "MIT"
repository = "https://github.com/NazaraEngine/wgsl-validator"

[dependencies]
naga = { version = "25.0.1", features = ["wgsl-in"] }

[lib]
crate-type = ["rlib", "cdylib"]
